# mqtt2tty

./: .gitignore  CMakeLists.txt  README.md  default.cfg  log.h  log4cpp.properties  main.cpp  mqtt2tty.code-workspace  mqttClient.cpp  mqttClient.h  mqttSubscriber.cpp  mqttSubscriber.h  pty.cpp  pty.h  tty.cpp  tty.h
etc/: default.cfg  log4cpp.properties
snap/: snapcraft.yaml
snap/hooks/: install
src/: CMakeLists.txt  log.h  main.cpp  mqttClient.cpp  mqttClient.h  mqttSubscriber.h  pty.cpp  pty.h  tty.cpp  tty.h
